--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "node-aop",
-  "description": "an simple aop",
+  "description": "a simple aop",
   "author": {
     "name": "Youjiang Wang"
   },
