--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "main": "aop.js",
   "repository": {
     "type": "git",
-    "url": "git://github.com/nodejs/js-aop.git"
+    "url": "git://github.com/nodejs/node-aop.git"
   },
   "keywords": [
     "aop"
