--- a/package.json
+++ b/package.json
@@ -1,19 +1,19 @@
 {
-  "name": "node-aop",
-  "description": "js aop(node-aop) is a aop helper library for JavaScript, can be run inside Node.js or in a browser.",
+  "name": "@yfe/aop",
+  "description": "aop is a aop helper library for JavaScript, can be run inside Node.js or in a browser.",
   "author": {
     "name": "Linus Wang"
   },
-  "version": "0.1.1",
+  "version": "0.1.0",
   "main": "aop.js",
   "repository": {
-	"type": "git",
-	"url": "git://github.com/notejs/aop.git"
+	  "type": "git",
+	  "url": "git://github.com/notejs/aop.git"
   },
   "keywords": [
     "aop",
     "node-aop",
-	"js aop"
+	 "js aop"
   ],
   "readme": "",
   "readmeFilename": "README.md"
